--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 html {
-  /* background-color: #8fc5c0; */
-  background: url(../images/sand.jpg);
-  background-size: cover;
+  background-color: #a9d2c5;
+  /* background: url(../images/sand.jpg); */
+  /* background-size: cover; */
   /* background-position: center center; */
   /* background-repeat: no-repeat; */
 }
