--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
   /* height: 100vh; */
   font-family: sans-serif;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-family: sans-serif;
@@ -31,14 +32,24 @@ canvas {
   left: 0;
 }
 
+.spacer {
+  height: 150px;
+  width: 100%;
+}
+
+.text-holder {
+  width: 80%;
+  margin: 0 auto;
+}
+
 .intro {
   z-index: 2;
   opacity: 1;
-  width: 75%;
+  width: 100%;
   height: auto;
-  margin: 0 auto;
   text-align: center;
-  color: rgba(45, 45, 45, 1)
+  color: rgba(45, 45, 45, 1);
+  background-color: rgba(255,255,252,.8);
 }
 
 p.hello {
