--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,7 +1,7 @@
 /* MAJOR ELEMENTS */
-* {
+/* * {
   box-sizing: border-box;
-}
+} */
 
 html {
   /* background-color: #a9d2c5; */
@@ -33,7 +33,7 @@ header {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   /* justify-content: center; */
 }
 
@@ -64,14 +64,15 @@ footer {
 
 /* NAV */
 nav {
-  width: 100%;
+  width: 80%;
+  margin: 0 auto;
   height: 10%;
   /* text-align: center; */
   z-index: 2;
   display: flex;
   /* flex-direction: column; */
   align-items: flex-start;
-  /* justify-content: flex-end; */
+  /* justify-content: center; */
   position: fixed;
   /* background-color: rgba(255,255,252,1); */
   /* color: rgba(110,110,130,1); */
@@ -82,7 +83,7 @@ nav {
 
 nav ul {
   padding: 0;
-  padding-left: 10px;
+  /* padding-left: 10px; */
   margin: 0;
 }
 
@@ -93,6 +94,11 @@ nav a {
   font-size: 30px;
   text-decoration: none;
   color: inherit;
+}
+
+nav #home-nav {
+  padding-left: 0 !important;
+  margin-left: 0 !important;
 }
 
 nav a:hover {
@@ -141,6 +147,50 @@ h1 {
   height: 100vh;
 }
 
+.about h1 {
+  margin-bottom: 10px;
+}
+
+.about p {
+  margin-bottom: 0
+}
+
+p.one {
+  margin-top: 0 !important;
+}
+.about-info {
+  background-color: rgba(255,255,252,.8);
+  padding: 10px;
+}
+
+.skills {
+  display: flex;
+}
+
+.skills-head {
+  position: relative;
+}
+.skills-head h3 {
+  position: fixed;
+  /* text-transform: uppercase;
+  font-size: 20px; */
+  transform: rotate(270deg);
+  -webkit-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+}
+
+.skills-body div {
+  display: inline-block;
+  border: 1px solid black;
+  background-color: rgba(255,255,252,.8);
+  padding: 5px;
+  margin: 5px;
+}
+
+.skills-body div:hover {
+  background-color: crimson;
+}
+
 /* PROJECTS */
 .projects {
   max-width: 100%:
@@ -162,12 +212,17 @@ h1 {
 figure {
   width: 300px;
   height: 300px;
-  border: 7px solid rgba(20, 20, 20, 1);
+  border: 6px solid rgba(40, 40, 40, 1);
   position: relative;
+  box-shadow: 0 0 25px rgba(0,0,0,0.8);
+}
+
+figure img {
+  width: 100%;
 }
 
 figcaption {
-  font-size: 40px;
+  font-size: 25px;
   position: absolute;
   top: 0;
   left: 0;
@@ -181,9 +236,13 @@ figcaption {
   background-color: #000000;
   color: #ffffff;
   text-align: center;
-  /* padding-top: 100px; */
+  /* padding-top: 90px; */
   /* adjust for height */
-  line-height: 295px;
+  line-height: 270px;
+}
+
+figcaption.small {
+  font-size: 18px;
 }
 
 figcaption:hover {
@@ -191,29 +250,35 @@ figcaption:hover {
   opacity: .6;
 }
 
-.circle {
-  border-radius: 50%;
-}
-
-.circle img {
+.circle, .circle img, .circle figcaption {
   border-radius: 50%;
 }
 
 .project div {
-  width: 300px;
-  height: 300px;
-}
-
-figure img {
-  width: 100%;
+  width: 320px;
+  /* height: 300px; */
+  background-color: rgba(255,255,252,.8);
+  padding: 15px;
 }
 
 .description h3 {
   margin-top: 0;
+  text-align: center;
 }
 
 .description p {
+  margin-bottom: 0;
+}
 
+button.code {
+  margin: 10px auto;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: #f2e1e1;
+  border: 1px solid rgba(30, 30, 30, 1);
+  font-size: 14px;
+  font-family: monospace;
+  box-shadow: 0,0,10px, rgba(0,0,0,0.5);
 }
 
 /* RESPONSIVENESS */
