--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -24,13 +24,11 @@ body {
   padding: 0;
   /* height: 100vh; */
   font-family: sans-serif;
-
-  font-family: sans-serif;
   color: rgba(40, 40, 40, 1);
 }
 
 header {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,13 +36,29 @@ header {
 }
 
 .main {
-  /* height: 800px; */
-  width: 80%;
+  width: 85%;
   margin: 30px auto 0 auto;
 }
 
 footer {
+  width: 85%;
+  margin: 0 auto 20px auto;
+  font-size: 32px;
+}
 
+a {
+  padding: 5px;
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
+}
+
+a:hover {
+  color: rgba(120, 100, 100, 1);
+}
+
+p {
+  font-size: 18px;
 }
 
 /* CANVAS STYLING */
@@ -55,49 +69,25 @@ footer {
   z-index: -5;
 }
 
-/* DELETE IF I DON'T USE IN THE END */
-#navCanvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
 /* NAV */
 nav {
-  width: 80%;
+  width: 85%;
   margin: 0 auto;
   height: 10%;
-  /* text-align: center; */
-  z-index: 2;
   display: flex;
-  /* flex-direction: column; */
-  align-items: flex-start;
-  /* justify-content: center; */
+  align-items: center;
+  justify-content: space-around;
   position: fixed;
-  /* background-color: rgba(255,255,252,1); */
-  /* color: rgba(110,110,130,1); */
   color: inherit;
-  /* margin-top: 10px; */
-  /* box-shadow: 0 0 10px rgba(0,0,0,0.2); */
-}
-
-nav ul {
-  padding: 0;
-  /* padding-left: 10px; */
-  margin: 0;
+  z-index: 99;
 }
 
 nav a {
-  display: inline-block;
-  padding: 10px 0;
-  margin: 0 10px;
-  font-size: 30px;
-  text-decoration: none;
-  color: inherit;
+  margin: 0 5px;
+  font-size: 28px;
 }
 
 nav #home-nav {
-  padding-left: 0 !important;
   margin-left: 0 !important;
 }
 
@@ -107,13 +97,13 @@ nav a:hover {
 
 /* SPACER */
 .spacer {
-  height: 33vh;
+  height: 25vh;
   width: 100%;
 }
 
 /* WELCOME PAGE TEXT */
 .text-holder {
-  width: 80%;
+  width: 85%;
   margin: 0 auto;
 }
 
@@ -128,13 +118,13 @@ nav a:hover {
 }
 
 h1.hello {
-  font-size: 64px;
+  font-size: 60px;
   text-transform: uppercase;
   margin-bottom: 10px;
 }
 
 h1 {
-  font-size: 48px;
+  font-size: 44px;
   margin-top: 0;
 }
 
@@ -142,9 +132,27 @@ h1 {
   margin-bottom: 30px;
 }
 
+.contact-icons {
+  text-align: left;
+  margin-top: 5%;
+}
+
+.contact-icons a {
+  padding: 0;
+  margin-right: 10px;
+  font-size: 48px;
+  background-color: white;
+  color: rgba(40, 40, 40, 1);
+}
+
+.contact-icons a:hover {
+  color: rgba(120, 100, 100, 1);
+}
+
 /* ABOUT */
 .about {
-  height: 100vh;
+  min-height: 100vh;
+  margin-top: 64px;
 }
 
 .about h1 {
@@ -158,43 +166,50 @@ h1 {
 p.one {
   margin-top: 0 !important;
 }
+
 .about-info {
+  margin-bottom: 20px;
+}
+
+.about-info p {
   background-color: rgba(255,255,252,.8);
-  padding: 10px;
+  padding: 5px;
 }
 
-.skills {
-  display: flex;
+.skills, .learning {
+  font-family: monospace;
+  margin-bottom: 10px;
 }
 
-.skills-head {
+.skills-head, .learning-head {
   position: relative;
 }
-.skills-head h3 {
-  position: fixed;
+.skills-head h3, .learning-head h3 {
+  /* position: fixed; */
   /* text-transform: uppercase;
   font-size: 20px; */
-  transform: rotate(270deg);
+  /* transform: rotate(270deg);
   -webkit-transform: rotate(270deg);
-  -ms-transform: rotate(270deg);
+  -ms-transform: rotate(270deg); */
+  margin: 0;
 }
 
-.skills-body div {
+.skills-body div, .learning-body div {
   display: inline-block;
   border: 1px solid black;
   background-color: rgba(255,255,252,.8);
   padding: 5px;
-  margin: 5px;
+  margin: 5px 5px 5px 0;
 }
 
-.skills-body div:hover {
-  background-color: crimson;
+.skills-body div:hover, .learning-body div:hover {
+  background-color: rgb(121, 139, 234);
 }
 
 /* PROJECTS */
 .projects {
-  max-width: 100%:
-  margin: 0 auto;
+  max-width: 100%;
+  margin: 64px auto 0 auto;
 }
 
 .projects h1 {
@@ -219,6 +234,9 @@ figure {
 
 figure img {
   width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 figcaption {
@@ -279,6 +297,21 @@ button.code {
   font-size: 14px;
   font-family: monospace;
   box-shadow: 0,0,10px, rgba(0,0,0,0.5);
+}
+
+/* FOOTER */
+div.final {
+  text-align: center;
+}
+
+footer p {
+  margin-bottom: 0;
+}
+
+footer a {
+  margin: 0 5px;
+  font-size: 20px;
+  text-transform: uppercase;
 }
 
 /* RESPONSIVENESS */
