--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,16 @@
+/* IMPORTED FONTS */
+/* font-family: 'Raleway', sans-serif;
+font-family: 'IBM Plex Sans', sans-serif;
+font-family: 'Open Sans', sans-serif; */
+
 /* MAJOR ELEMENTS */
-/* * {
-  box-sizing: border-box;
-} */
 
 html {
 
 }
 
 body {
-  font-family: sans-serif;
+  font-family: 'Raleway', sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -50,11 +52,15 @@ a {
 }
 
 a:hover {
-  color: rgba(120, 100, 100, 1);
+
+}
+
+h1, h2, h3, nav a {
+  font-family: 'Raleway', sans-serif;
 }
 
 p {
-  font-size: 18px;
+  font-size: 17px;
 }
 
 /* CANVAS STYLING */
@@ -89,6 +95,7 @@ nav #home-nav {
 
 nav a:hover {
   text-decoration: underline;
+  color: rgba(120, 100, 100, 1);
 }
 
 /* SPACER */
@@ -115,11 +122,13 @@ h1.hello {
   font-size: 60px;
   text-transform: uppercase;
   margin-bottom: 10px;
+  font-family: 'Raleway', sans-serif;
 }
 
 h1 {
   font-size: 44px;
   margin-top: 0;
+  font-family: 'Raleway', sans-serif;
 }
 
 .intro h2 {
@@ -146,7 +155,7 @@ h1 {
 /* ABOUT */
 .about {
   min-height: 100vh;
-  margin-top: 64px;
+  margin-top: 70px;
 }
 
 .about h1 {
@@ -202,7 +211,7 @@ p.one {
 
 /* PROJECTS */
 .projects {
-  margin: 64px auto 0 auto;
+  margin: 70px auto 0 auto;
 }
 
 .projects h1 {
@@ -217,10 +226,14 @@ p.one {
   margin: 40px 0 0 0;
 }
 
+.project.co-canvas {
+  margin-top: 20px !important;
+}
+
 figure {
   width: 290px;
   height: 290px;
-  border: 6px solid rgba(40, 40, 40, 1);
+  border: 4px solid rgba(40, 40, 40, 1);
   position: relative;
   box-shadow: 0 0 25px rgba(0,0,0,0.8);
   margin: 0;
@@ -259,6 +272,10 @@ figcaption:hover {
   opacity: .6;
 }
 
+figcaption a:hover {
+  font-size: 23px;
+}
+
 .circle, .circle img, .circle figcaption {
   border-radius: 50%;
 }
@@ -272,7 +289,7 @@ figcaption:hover {
   width: 310px;
 }
 
-.description h3 {
+.description h2 {
   margin-top: 0;
   text-align: center;
 }
@@ -319,7 +336,7 @@ footer a {
     width: 400px;
   }
 }
-@media (min-width: 650px) {
+@media (min-width: 630px) {
   nav {
     justify-content: flex-start;
   }
@@ -337,7 +354,6 @@ footer a {
   }
   .project {
     flex-direction: row;
-    /* justify-content: space-evenly; */
     align-items: flex-start;
   }
   .description {
@@ -354,6 +370,6 @@ footer a {
 
 @media (min-width: 1200px) {
   .project {
-    
+
   }
 }
