--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,6 @@ font-family: 'Open Sans', sans-serif; */
 
 /* MAJOR ELEMENTS */
 
-html {
-
-}
-
 body {
   font-family: 'Raleway', sans-serif;
   margin: 0;
@@ -16,10 +12,8 @@ body {
 }
 
 .container {
-  /* width: 100%; */
   margin: 0;
   padding: 0;
-  /* font-family: sans-serif; */
   color: rgba(40, 40, 40, 1);
 }
 
@@ -30,7 +24,6 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
 }
 
 .main {
@@ -105,7 +98,6 @@ nav a:hover {
   z-index: 1;
   opacity: 1;
   width: 100%;
-  /* height: 65vh; */
   text-align: left;
   color: rgba(45, 45, 45, 1);
 }
@@ -154,18 +146,14 @@ h1 {
 /* ABOUT */
 .about {
   min-height: 100vh;
-  margin-top: 90px;
+  /* margin-top: 90px; */
   display: flex;
   flex-direction: column;
 }
 
 .about-spacer, .projects-spacer {
   width: 100%;
-  height: 20vh;
-}
-
-.about-text {
-  /* height: 75vh; */
+  height: 10vh;
 }
 
 .about h1 {
@@ -198,12 +186,6 @@ p.one {
   position: relative;
 }
 .skills-head h3, .learning-head h3 {
-  /* position: fixed; */
-  /* text-transform: uppercase;
-  font-size: 20px; */
-  /* transform: rotate(270deg);
-  -webkit-transform: rotate(270deg);
-  -ms-transform: rotate(270deg); */
   margin: 0;
 }
 
@@ -221,7 +203,7 @@ p.one {
 
 /* PROJECTS */
 .projects {
-  margin: 64px auto 0 auto;
+  margin: 0 auto;
 }
 
 .projects h1 {
@@ -233,7 +215,7 @@ p.one {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 40px 0 0 0;
+  margin: 120px 0 0 0;
 }
 
 .project.co-canvas {
