--- a/css/style.css
+++ b/css/style.css
@@ -69,16 +69,23 @@ p, li {
 }
 
 /* NAV */
-nav {
-  width: 85%;
-  margin: 0 auto;
-  height: 10vh;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.nav-container {
+  width: 100%;
+  height: 9vh;
   position: fixed;
   color: inherit;
   z-index: 99;
+  /* background: #d1a1a1eb; */
+  background: rgba(162, 172, 230, 0.9);
+}
+
+nav {
+  width: 85%;
+  height: inherit;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 nav a {
